--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a dog lover</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Camel City</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My family, my dogs</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Exotic animal rescuer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>See above...</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Lapsed engineers have to do something...</p>
     </section>
 
     <footer id="footer">
